--- a/.github/workflows/clang-tidy-check.yml
+++ b/.github/workflows/clang-tidy-check.yml
@@ -19,9 +19,13 @@ jobs:
 
   clang-tidy:
     runs-on: ubuntu-latest
-    # Add dependency on security-check for PR events only
+    # Only depend on security-check for PR events, and either run if it passes or if this is a direct push
     needs: [security-check]
-    if: ${{ github.event_name != 'pull_request' || needs.security-check.outputs.security_cleared == 'true' || !failure() }}
+    if: |
+      success() && (
+        github.event_name != 'pull_request' || 
+        needs.security-check.outputs.security_cleared == 'true'
+      )
 
     steps:
       - name: Checkout code
