--- a/.github/workflows/pull_request_integration_tests_arm.yml
+++ b/.github/workflows/pull_request_integration_tests_arm.yml
@@ -19,13 +19,9 @@ jobs:
     
   test:
     name: test
-    # Only depend on security-check for PR events, and either run if it passes or if this is a direct push
+    # Add dependency on security-check for PR events only
     needs: [security-check]
-    if: |
-      success() && (
-        github.event_name != 'pull_request' || 
-        needs.security-check.outputs.security_cleared == 'true'
-      )
+    if: always() && (github.event_name != 'pull_request' || needs.security-check.outputs.security_cleared == 'true')
     runs-on: github-hosted-ubuntu-arm64-large
     # Grant specific permissions needed only for this job
     permissions:
@@ -37,27 +33,33 @@ jobs:
     steps:
       - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
         with:
+          fetch-depth: 0  # Need full history for security check
           persist-credentials: false
+
       - name: Set up Go
         uses: actions/setup-go@be3c94b385c4f180051c996d336f57a34c397495 # v3
         with:
           cache: false  # Disable caching to avoid extraction conflicts
           go-version: ${{ matrix.go }}
+          
       - name: Clean up disk space
         run: |
           docker system prune -af
           docker volume prune -f
+          
       - name: Run integration tests
         run: make docker-generate integration-test-arm
         timeout-minutes: 60
+        
       - name: Upload integration test logs
-        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         if: always()
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         with:
           name: Test Logs
           path: |
             testoutput/*.log
             testoutput/kind
+            
       - name: Report coverage
         uses: codecov/codecov-action@b9fd7d16f6d7d1b5d2bec1a2887e65ceed900238 # v4
         env:
