--- a/.github/workflows/clang-tidy-check.yml
+++ b/.github/workflows/clang-tidy-check.yml
@@ -20,14 +20,15 @@ jobs:
   clang-tidy:
     runs-on: ubuntu-latest
     # Add dependency on security-check for PR events only
-    needs: [security-check]
-    if: always() && (github.event_name != 'pull_request' || needs.security-check.outputs.security_cleared == 'true')
+    needs: security-check
+    if: |
+      github.event_name == 'push' ||
+      (github.event_name == 'pull_request' && needs.security-check.result == 'success' && needs.security-check.outputs.security_cleared == 'true')
 
     steps:
       - name: Checkout code
         uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
         with:
-          fetch-depth: 0  # Need full history for security check
           persist-credentials: false
 
       - name: Install clang-tidy
