--- a/.github/workflows/pull_request_k8s_integration_tests.yml
+++ b/.github/workflows/pull_request_k8s_integration_tests.yml
@@ -20,8 +20,10 @@ jobs:
   test:
     name: test
     # Add dependency on security-check for PR events only
-    needs: [security-check]
-    if: always() && (github.event_name != 'pull_request' || needs.security-check.outputs.security_cleared == 'true')
+    needs: security-check
+    if: |
+      github.event_name == 'push' ||
+      (github.event_name == 'pull_request' && needs.security-check.result == 'success' && needs.security-check.outputs.security_cleared == 'true')
     runs-on: ubuntu-latest-8-cores
     # Grant specific permissions needed only for this job
     permissions:
