--- a/.github/workflows/helm-test.yml
+++ b/.github/workflows/helm-test.yml
@@ -33,10 +33,9 @@ jobs:
   lint-helm-chart:
     runs-on: ubuntu-latest
     # Add dependency on security-check for PR events only
-    needs: security-check
-    if: |
-      github.event_name != 'pull_request' ||
-      (github.event_name == 'pull_request' && needs.security-check.result == 'success' && needs.security-check.outputs.security_cleared == 'true')
+    needs: [security-check]
+    # Simple condition: Run on push OR on PRs where security-check outputs security_cleared=true
+    if: ${{ github.event_name != 'pull_request' || needs.security-check.outputs.security_cleared == 'true' }}
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
