--- a/.github/workflows/clang-tidy-check.yml
+++ b/.github/workflows/clang-tidy-check.yml
@@ -6,9 +6,11 @@ on:
   pull_request:
     branches: [ 'main', 'release-*' ]
 
-# Set restrictive permissions at workflow level
+# Set permissions at workflow level
 permissions:
   contents: read
+  issues: write
+  pull-requests: write
 
 jobs:
   # Reference the security-check workflow when running on PRs
@@ -23,6 +25,9 @@ jobs:
     needs: [security-check]
     # Simple condition: Run on push OR on PRs where security-check outputs security_cleared=true
     if: ${{ github.event_name != 'pull_request' || needs.security-check.outputs.security_cleared == 'true' }}
+    # Override permissions for this job to be more restrictive
+    permissions:
+      contents: read
 
     steps:
       - name: Checkout code
