--- a/.github/workflows/pull_request_k8s_integration_tests.yml
+++ b/.github/workflows/pull_request_k8s_integration_tests.yml
@@ -6,9 +6,11 @@ on:
   pull_request:
     branches: [ 'main', 'release-*' ]
 
-# Set restrictive permissions at workflow level
+# Set permissions at workflow level
 permissions:
   contents: read
+  issues: write
+  pull-requests: write
 
 jobs:
   # Reference the security-check workflow when running on PRs
@@ -24,7 +26,7 @@ jobs:
     # Simple condition: Run on push OR on PRs where security-check outputs security_cleared=true
     if: ${{ github.event_name != 'pull_request' || needs.security-check.outputs.security_cleared == 'true' }}
     runs-on: ubuntu-latest-8-cores
-    # Grant specific permissions needed only for this job
+    # Override permissions for this job
     permissions:
       contents: read
       pull-requests: write
