--- a/.github/workflows/pull_request_oats_test.yml
+++ b/.github/workflows/pull_request_oats_test.yml
@@ -15,13 +15,17 @@ jobs:
   security-check:
     if: github.event_name == 'pull_request'
     uses: ./.github/workflows/security-check.yml
+    permissions:
+      contents: read
+      issues: write
+      pull-requests: write
     secrets: inherit
     
   test:
     name: test
     # Add dependency on security-check for PR events only
     needs: [security-check]
-    if: ${{ github.event_name != 'pull_request' || needs.security-check.outputs.security_cleared == 'true' || !failure() }}
+    if: ${{ github.event_name != 'pull_request' || needs.security-check.outputs.security_cleared == 'true' }}
     runs-on: ubuntu-latest-8-cores
     strategy:
       matrix:
