--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -1,8 +1,10 @@
 name: Clang Format Check
 
 on:
+  push:
+    branches: [ 'main', 'release-*' ]
   pull_request:
-    types: [opened, synchronize, reopened]
+    branches: [ 'main', 'release-*' ]
 
 # Set restrictive permissions at workflow level
 permissions:
