--- a/.github/workflows/pull_request_integration_tests.yml
+++ b/.github/workflows/pull_request_integration_tests.yml
@@ -1,8 +1,10 @@
 name: Pull request integration tests
 
 on:
+  push:
+    branches: [ 'main', 'release-*' ]
   pull_request:
-    types: [opened, synchronize, reopened]
+    branches: [ 'main', 'release-*' ]
 
 # Set restrictive permissions at workflow level
 permissions:
