--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -47,6 +47,7 @@ jobs:
     uses: ./.github/workflows/security-check.yml
     secrets: inherit
     permissions:
+      contents: read
       issues: write
       pull-requests: write
 
