--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -47,5 +47,6 @@ jobs:
     uses: ./.github/workflows/security-check.yml
     secrets: inherit
     permissions:
+      contents: read
       issues: write
       pull-requests: write
