--- a/.github/workflows/pull_request_check_license.yml
+++ b/.github/workflows/pull_request_check_license.yml
@@ -16,6 +16,10 @@ jobs:
     if: github.event_name == 'pull_request'
     uses: ./.github/workflows/security-check.yml
     secrets: inherit
+    permissions:
+      contents: read
+      issues: write
+      pull-requests: write
     
   check-licenses:
     name: check-licenses
